Fix path Dockerfile and update docker-compose

--- a/Project_Laravel/Dockerfile
+++ b/Project_Laravel/Dockerfile
@@ -1,16 +1,39 @@
-# Sử dụng PHP 8.2 đúng yêu cầu đề bài
 FROM php:8.2-fpm
 
-# Cài đặt các thư viện cần thiết cho Laravel (zip, git, mysql...)
+# 1. Cài đặt thư viện hệ thống cần thiết
 RUN apt-get update && apt-get install -y \
-    libzip-dev \
+    build-essential \
+    libpng-dev \
+    libjpeg62-turbo-dev \
+    libfreetype6-dev \
+    locales \
     zip \
     unzip \
     git \
-    && docker-php-ext-install pdo_mysql zip
+    curl \
+    libonig-dev \
+    libzip-dev \
+    libgd-dev
 
-# Cài đặt Composer (Công cụ quản lý thư viện của PHP)
+# 2. Cài đặt PHP Extensions
+RUN docker-php-ext-configure gd --with-freetype --with-jpeg
+RUN docker-php-ext-install pdo_mysql mbstring zip exif pcntl gd
+
+# 3. Cài đặt Composer
 COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 
-# Thiết lập thư mục làm việc
+# 4. Thiết lập thư mục làm việc
 WORKDIR /var/www
+
+# --- ĐOẠN QUAN TRỌNG ĐÃ SỬA ---
+# Copy code từ thư mục src (trên máy) vào /var/www (trong container)
+COPY ./src /var/www
+
+# 5. Cài đặt các gói thư viện của Laravel
+RUN composer install --no-dev --optimize-autoloader
+
+# 6. Cấp quyền ghi file cho Laravel
+RUN chown -R www-data:www-data /var/www/storage /var/www/bootstrap/cache
+
+EXPOSE 9000
+CMD ["php-fpm"]
