Add auto migration

--- a/Project_Laravel/Dockerfile
+++ b/Project_Laravel/Dockerfile
@@ -36,4 +36,4 @@ RUN composer install --no-dev --optimize-autoloader
 RUN chown -R www-data:www-data /var/www/storage /var/www/bootstrap/cache
 
 EXPOSE 9000
-CMD ["sh", "-c", "php artisan optimize:clear && php-fpm"]
+CMD ["sh", "-c", "php artisan migrate --force && php artisan optimize:clear && php-fpm"]
